# matrix-cpos

./: .clang-format  CMakeLists.txt  README.md
doc/compiler_design/: blocks.md
examples/: CMakeLists.txt  bcsr_matrix_view_example.cpp  coo_matrix_example.cpp  csr_matrix_example.cpp  dcsr_matrix_example.cpp  dense_matrix_example.cpp  mdspan_example.cpp  sycl_example.cpp  test  test.cpp  unrolled_example.cpp
include/: CMakeLists.txt
include/mc/: algorithms.hpp  cpos.hpp  index.hpp  mc.hpp  mdspan_cpos.hpp  ranges.hpp
include/mc/algorithms/: algorithms.hpp  spmv.hpp
include/mc/detail/: integer_literals.hpp  tag_invoke.hpp
include/mc/util/: generate_csr_matrix.hpp  generate_matrices.hpp  generate_vector.hpp  util.hpp
include/mc/views/: bcsr_matrix_view.hpp  coo_matrix_view.hpp  csc_matrix_view.hpp  csr_matrix_view.hpp  dcsr_matrix_view.hpp  dense_matrix_view.hpp
other/: csr_matrix_view_mxv.cpp
test/: CMakeLists.txt
test/cmytest/: CMakeLists.txt
test/gtest/: CMakeLists.txt  coo_matrix_view_test.cpp  csc_matrix_view_test.cpp  csr_matrix_view_test.cpp  dense_matrix_view_test.cpp  mdspan_test.cpp
